--- a/Parcels, Paths and Patches.css
+++ b/Parcels, Paths and Patches.css
@@ -2,24 +2,6 @@
 @font-face { font-family: 'Book Antiqua';	font-weight: normal;	font-style: italic;	src: url(Book%20Antiqua%20Italics.ttf);	}
 @font-face { font-family: 'Book Antiqua';	font-weight: bold;	font-style: normal;	src: url(Book%20Antiqua%20Bold.ttf);	}
 @font-face { font-family: 'Book Antiqua';	font-weight: bold;	font-style: italic;	src: url(Book%20Antiqua%20Bold%20Italics.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 100;	font-style: normal;	src: url(WorkSans-Thin.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 100;	font-style: italic;	src: url(WorkSans-ThinItalic.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 200;	font-style: normal;	src: url(WorkSans-ExtraLight.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 200;	font-style: italic;	src: url(WorkSans-ExtraLightItalic.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 300;	font-style: normal;	src: url(WorkSans-Light.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 300;	font-style: italic;	src: url(WorkSans-LightItalic.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 400;	font-style: normal;	src: url(WorkSans-Regular.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 400;	font-style: italic;	src: url(WorkSans-RegularItalic.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 500;	font-style: normal;	src: url(WorkSans-Medium.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 500;	font-style: italic;	src: url(WorkSans-MediumItalic.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 600;	font-style: normal;	src: url(WorkSans-SemiBold.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 600;	font-style: italic;	src: url(WorkSans-SemiBoldItalic.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 700;	font-style: normal;	src: url(WorkSans-Bold.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 700;	font-style: italic;	src: url(WorkSans-BoldItalic.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 800;	font-style: normal;	src: url(WorkSans-ExtraBold.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 800;	font-style: italic;	src: url(WorkSans-ExtraBoldItalic.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 900;	font-style: normal;	src: url(WorkSans-Black.ttf);	}
-@font-face { font-family: 'Work Sans';	font-weight: 900;	font-style: italic;	src: url(WorkSans-BlackItalic.ttf);	}
 @font-face { font-family: 'Proxima';	font-weight: 100;	font-style: normal;	src: url(Proxima%20Nova%20Extra%20Condensed%20Thin.otf);	}
 @font-face { font-family: 'Proxima';	font-weight: 100;	font-style: italic;	src: url(Proxima%20Nova%20Extra%20Condensed%20Thin%20Italic.otf);	}
 @font-face { font-family: 'Proxima';	font-weight: 300;	font-style: normal;	src: url(Proxima%20Nova%20Extra%20Condensed%20Light.otf);	}
@@ -34,6 +16,16 @@
 @font-face { font-family: 'Proxima';	font-weight: 800;	font-style: italic;	src: url(Proxima%20Nova%20Extra%20Condensed%20Extrabold%20Italic.otf);	}
 @font-face { font-family: 'Proxima';	font-weight: 900;	font-style: normal;	src: url(Proxima%20Nova%20Extra%20Condensed%20Black.otf);	}
 @font-face { font-family: 'Proxima';	font-weight: 900;	font-style: italic;	src: url(Proxima%20Nova%20Extra%20Condensed%20Black%20Italic.otf);	}
+
+@font-face { font-family: 'Work Sans';	font-weight: 100;	src: url(WorkSans-Thin.otf);	}
+@font-face { font-family: 'Work Sans';	font-weight: 200;	src: url(WorkSans-ExtraLight.otf);	}
+@font-face { font-family: 'Work Sans';	font-weight: 300;	src: url(WorkSans-Light.otf);	}
+@font-face { font-family: 'Work Sans';	font-weight: 400;	src: url(WorkSans-Regular.otf);	}
+@font-face { font-family: 'Work Sans';	font-weight: 500;	src: url(WorkSans-Medium.otf);	}
+@font-face { font-family: 'Work Sans';	font-weight: 600;	src: url(WorkSans-SemiBold.otf);	}
+@font-face { font-family: 'Work Sans';	font-weight: 700;	src: url(WorkSans-Bold.otf);	}
+@font-face { font-family: 'Work Sans';	font-weight: 800;	src: url(WorkSans-ExtraBold.otf);	}
+@font-face { font-family: 'Work Sans';	font-weight: 900;	src: url(WorkSans-Black.otf);	}
 
 * { pointer-events: none; }
 #input { user-select: none; }
@@ -51,7 +43,7 @@ body, svg {
 	width: 100vw;
 	height: 100vh;
 }
-#div {
+foreignObject>div {
 	font-family: 'Work Sans';
 	font-size: 24pt;
 	background: hsl(220, 10%, 20%);
@@ -78,7 +70,7 @@ body, svg {
 .cw-c.hl { background: hsl(220, 10%, 50%); color: white; }
 .cw-c .e { opacity: .7; font-size: 14pt; }
 
-ul { margin: 1cm 0; }
+ul { margin: .5cm 0 1cm; margin-bottom: 2cm; }
 li { margin: .5cm 0; }
 
 #input path { fill: transparent; }
@@ -114,12 +106,32 @@ li { margin: .5cm 0; }
 .fl { font-style: italic; font-weight: 300; margin: 1.5cm 0 1.5cm; }
 
 p.kbd { font-size: 18pt; font-weight: 300; margin: 0; line-height: 2; }
-p.kbd kbd { background: hsl(220, 50%, 30%); padding: .1cm .15cm; margin: 0 .1cm; font-family: inherit; font-weight: 600; }
+p.kbd kbd { background: hsl(220, 50%, 30%); padding: .1cm .15cm; margin: 0 .1cm; font-family: inherit; font-weight: 600; text-transform: uppercase; }
 p.kbd kbd:first-child { margin-left: 0; }
 p.kbd kbd+span { margin-right: .4cm; }
 p.kbd > span { white-space: nowrap; }
 
-.cs { text-align: center; width: 100%; border-collapse: collapse; }
+.cs { text-align: center; width: 100%; border-collapse: collapse; margin-bottom: 2cm; }
 .cs td { height: 2cm; min-width: 1.5cm; }
 .cs td.h { background-color: hsl(222, 10%, 15%); }
 .cs td.up>span { text-orientation: mixed; writing-mode: vertical-rl; transform: rotate(180deg); }
+
+path.tg { animation: .47s ease-in-out alternate infinite pulsate-tg; }
+
+@keyframes pulsate-tg {
+	0%	{ fill: hsl(220, 10%, 15%); }
+	100%	{ fill: hsl(220, 10%, 25%); }
+}
+
+.ar .q	{	fill: hsl(220, 10%, 25%); }
+.ar .a	{	fill: none; stroke: hsl(220, 20%, 80%); stroke-width: .3; opacity: .2; marker-end: url(#arrow-marker); }
+.ar text	{	fill: hsl(120, 80%, 80%); opacity: 0; font-size: 1px; font-weight: 900; text-anchor: middle; }
+.ar.u .q	{	fill: hsl(120, 20%, 25%); }
+.ar.u .a	{	stroke: hsl(120, 40%, 70%); opacity: .5; }
+.ar.u text	{	opacity: 1; }
+
+#ans-chk>div	{ padding: 0; }
+.ans-chk	{ font: inherit; font-size: 20pt; text-align: center; }
+.ans-chk select	{ font: inherit; font-size: 16pt; margin-right: .25cm; }
+.ans-chk input	{ font: inherit; font-size: 16pt; margin-right: .25cm; }
+.ans-chk button	{ font: inherit; font-size: 16pt; padding: .1cm .25cm; background: hsl(220, 40%, 40%); border: 4px solid hsl(220, 40%, 50%); color: white; }
