--- a/Parcels, Paths and Patches.css
+++ b/Parcels, Paths and Patches.css
@@ -70,7 +70,8 @@ foreignObject>div {
 .cw-c.hl { background: hsl(220, 10%, 50%); color: white; }
 .cw-c .e { opacity: .7; font-size: 14pt; }
 
-ul { margin: .5cm 0 1cm; margin-bottom: 2cm; }
+ul, ol { margin: .5cm 0 1cm; margin-bottom: 2cm; }
+ol { padding-left: 1.5cm; }
 li { margin: .5cm 0; }
 
 #input path { fill: transparent; }
@@ -95,9 +96,10 @@ li { margin: .5cm 0; }
 	100%	{ opacity: 0; }
 }
 
-.nun { transition: transform .1s; }
-.nun.sel { transform: scale(1.25); filter: url(#shadow); }
-text.q { animation: .47s ease-in-out alternate infinite pulsate-q; fill: hsl(38, 80%, 85%); stroke: hsl(38, 60%, 25%); paint-order: stroke; stroke-width: 10; text-anchor: middle; font-family: 'Work Sans'; font-weight: 700; }
+.movable { transition: transform .1s; }
+.movable.sel { transform: scale(1.25); filter: url(#shadow); }
+
+text.q { animation: .47s ease-in-out alternate infinite pulsate-q; fill: hsl(38, 80%, 85%); stroke: hsl(38, 60%, 25%); paint-order: stroke; stroke-width: 10; text-anchor: middle; }
 
 @keyframes pulsate-q {
 	0%	{ transform: scale(.7); }
@@ -136,3 +138,5 @@ path.tg { animation: .47s ease-in-out alternate infinite pulsate-tg; }
 .ans-chk select	{ font: inherit; font-size: 16pt; margin-right: .25cm; }
 .ans-chk input	{ font: inherit; font-size: 16pt; margin-right: .25cm; }
 .ans-chk button	{ font: inherit; font-size: 16pt; padding: .1cm .25cm; background: hsl(220, 40%, 40%); border: 4px solid hsl(220, 40%, 50%); color: white; }
+
+li.j { opacity: .4; }
