* Rename “steps” to “stages” (except in the source code)
* Add thumbnail for the nun movement puzzle before the Yajilin so it’s easier to see the directions
* Show the order in which objects moved in Stage 14, show buttons to let user swap them, and require to submit them in the correct order
* Ability to show a thumbnail at greater opacity (mouse down)
* Add Home/PageUp/PageDown/End keys

--- a/Parcels, Paths and Patches.css
+++ b/Parcels, Paths and Patches.css
@@ -143,3 +143,7 @@ path.tg { animation: .47s ease-in-out alternate infinite pulsate-tg; }
 .ans-chk button	{ font: inherit; font-size: 16pt; padding: .1cm .25cm; background: hsl(220, 40%, 40%); border: 4px solid hsl(220, 40%, 50%); color: white; }
 
 li.j { opacity: .4; }
+
+#input .swapper,	#das .swapper	{ cursor: pointer; }
+#input .swapper>.s,	#das .swapper>.s	{ stroke-opacity: 0; transition: stroke-opacity .147s; stroke: hsl(220, 20%, 10%); stroke-width: 12; paint-order: stroke; stroke-linejoin: round;	fill: hsl(220, 20%, 50%); }
+#input .swapper:hover>.s,	#das .swapper:hover>.s	{ stroke-opacity: 1; }
